# dynamic-expressions

./: .gitignore  CHANGELOG.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  taskfile.yaml
.github/workflows/: lint.yml  publish-docs.yml  publish.yml  test.yml
docs/: about.md  cookbook.md  dispatcher.md  extensions.md  nodes.md
docs/code/: dispatcher_1.py
dynamic_expressions/: dispatcher.py  extensions.py  middlewares.py  nodes.py  schemas.py  types.py  utils.py  visitors.py
dynamic_expressions/cache/: __init__.py  base.py  redis.py
dynamic_expressions/serialization/: __init__.py  _serialization.py  msgspec.py  pydantic.py
tests/: conftest.py  test_middleware.py
tests/cache/redis/: conftest.py  test_once_visit.py
tests/nodes/: conftest.py  test_all_of.py  test_any_of.py  test_binary_node.py  test_coalesce.py  test_literal_node.py  test_match.py
tests/serialization/msgspec/: test_serializer.py
tests/serialization/pydantic/: test_mapping.py  test_parser.py  test_pydantic.py  test_serializer.py  test_validators.py
