[project]
name = "dynamic-expressions"
version = "0.1.3"
description = ""
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/waku-py/dynamic-expressions"

[project.optional-dependencies]
cache-redis = [
    "redis>=5.2.1",
]
serialization-pydantic = [
    "pydantic>=2.10.6",
]
serialization-msgspec = [
    "msgspec>=0.19.0",
]

[dependency-groups]
dev = [
    "anyio>=4.8.0",
    "commitizen",
    "coverage>=7.6.10",
    "deptry>=0.23.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "redis>=5.2.1",
    "ruff>=0.9.4",
    "testcontainers>=4.9.1",
    "types-redis>=4.6.0.20241004",
]


[tool.pytest.ini_options]
pythonpath = "."
markers = ["redis"]

[tool.coverage.run]
source = ["dynamic_expressions"]
omit = []
command_line = "-m pytest -v"
concurrency = []
branch = true

[tool.coverage.report]
exclude_lines = [
    "class .*\\(.*\\bProtocol\\b.*\\):",
    "@(?:typing\\.)?overload",
    "if TYPE_CHECKING:",
]

[tool.deptry]
[tool.deptry.per_rule_ignores]
DEP002 = []

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

strict = true
follow_imports = "normal"
ignore_missing_imports = false

allow_redefinition = false
disallow_any_explicit = false
ignore_errors = false
local_partial_types = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

pretty = true
show_column_numbers = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
src = ["dynamic_expressions", "tests"]
[tool.ruff.lint]
fixable = [
    "F",
    "E",
    "W",
    "I",
    "COM",
    "UP",
    "RUF",
]
unfixable = [
    "F841", # Variable  is assigned to but never used
]
select = ["ALL"]
ignore = [
    "E501", # Line Length
    "D10", # Disable mandatory docstrings
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "PD", # pandas-vet
    "EXE",
    "COM812",  # ruff format conflict
    "ISC001",  # ruff format conflict
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = ["types"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"
tag_format = "$major.$minor.$patch"
version_scheme = "pep440"
version_provider = "pep621"
major_version_zero = true
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
]
